--- a/style.css
+++ b/style.css
@@ -18,163 +18,226 @@ html{
     scroll-padding-bottom: 5px;
     scroll-padding-top: 50px;
 }
-
-
 header{
+    background-color: var(--brown);
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    width: 100%;
-    height: 50px;
-    padding: 0px 25px 0px 25px;
-    position: sticky;
+    align-items: center;
+    position: fixed;
     top: 0;
-    background: var(--white);
-    color: var(--beige);
-    z-index: 2;
+    color: var(--beige-light);
+    height: 60px;
+    width: 100%;
+    padding: 0px 30px;
+    margin: 0 auto;
+    z-index: 999;
+}
+.logo{
+height: 89.5px;
+width: 3.49%;
+top: 0px;
+position: absolute;
+}
+.icono-carrito, .carrito-icon{
+    font-size: 18px;
+    color: var(--beige-light);
+    order: 2;
+    cursor: pointer;
+}
+.icono-carrito:hover, .carrito-icon:hover{
+    scale: 1.1;
+    transition: all 0.3s ease;
+}
+.bars-menu{
+    display: none;
+}
+.navbar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    order: 1;
 }
 .navbar-list{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    height: 100%;
-    width: 400px;
+    gap: 150px;
 }
-li, a{
-    color: var(--beige);
-    font-size: var(--font-small);
-    font-weight: 700;
-}
-li,a:hover{
-    color:var(--brown);
-    transition: all 0.3s ease-in-out;
-}
-.icono-carrito{
-    order: 1;
-    height: 100%;
-    font-size: var(--font-big);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    font-size: 20px;
-}
-.icono-carrito:hover{
-    color: var(--brown);
-    transition: all 0.3s ease-in-out;
-}
-nav > ul{
-    position: relative;
+.nav-link{
+    color: var(--beige-light);
+    font-size: 16px;
+    font-weight: 500;
 }
 .carrito{
-    display:none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(136, 206, 136);
     position: absolute;
-    top: 50px;
+    top: 60px;
     right: 0;
+    padding: 20px 10px;
+    background: var(--beige);
+    border-left: 1px solid var(--nav-bg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 30px;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 60px);
     overflow-y: scroll;
     z-index: 2;
-    padding: 30px 10px;
+    min-width: 375px;
+    transform: translate(200%);
+    transition: all 0.5s cubic-bezier(0.92, 0.01, 0.35, 0.99);
+}
+.carrito > h2{
+    font-size: 15px;
 }
 .carrito::-webkit-scrollbar{
     display: none;
 }
-.carrito > h2{
-    font-size: 20px;
-    font-weight: 700;
-    color: var(--beige);
-    text-align: center;
-    margin: 30px 0px;
-}
-.empty-msg{
-    font-size: 14px;
-    font-weight: 500;
-    margin-top: 20px;
-}
-.divider{
-    width: 95%;
-    height: 2.5px;
-    background-color: var(--beige);
-    margin-top: 50px;
-}
-.carrito-total{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    font-size: 20px;
-}
-.btn-comprar, .btn-vaciar-carrito{
-    width: 70%;
-    height: 40px;
-    border:none;
-    border-radius: 3px;
-    cursor: pointer;
-}
-.btn-comprar{
-    background-color: #cb670a;
-}
-.btn-vaciar-carrito{
-    background-color: #cb670a6b;
-    margin-bottom: 30px;
-}
 .carrito-productos{
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
 }
 .cart-item{
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    gap: 20px;
+    align-items: center;
+    gap: 10px;
+    padding: 8px;
+    border: 2px dashed var(--brown);
+    border-radius: 3px;
+}
+.img-cart-item{
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+.text-cartProd{
+    text-align: center;
+    line-height: 35px;
+}
+.text-cartProd > p{
+    font-size: 16px;
+    font-weight: 700;
+}
+.text-cartProd > h3{
+    font-size: 16px;
+    font-weight: 600;
+}
+.counter-cartProd{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+.up, .down{
+    font-size: 20px;
+    color: var(--beige-light);
+    cursor: pointer;
+}
+.up, .down{
+    border: 1px solid var(--brown);
+    padding: 10px;
+    border-radius: 3px;
+}
+.up:hover, .down:hover{
+    background-color: var(--beige);
+    color: var(--white);
+}
+.carrito-total{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 22px;
+    gap: 200px;
+}
+.carrito-total > h3{
+    font-size: 23px;
+    font-weight: 600;
+}
+.total{
+    font-size: 22px;
+    font-weight: 700;
+}
+.total:hover{
+    scale: 1.1;
+    transition: all 0.3s ease;
+}
+.btn-comprar{
+    background-color: var(--brown);
+    color: var(--beige-light);
+    border-radius: 3px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    width: 50%;
+    padding: 10px;
+    border: none;
+}
+.btn-comprar:hover, .btn-vaciar-carrito:hover{
+    scale: 1.1;
+    transition: all 0.3s ease;
+}
+.btn-vaciar-carrito{
+    background-color: var(--beige);
+    color: var(--beige-light);
+    border: 2px solid var(--brown);
+    border-radius: 3px;
+    font-size: 16px;
+    font-weight: 600;
+    cursor: pointer;
+    width: 50%;
     padding: 10px;
 }
-/* *------------------------------------------------------------------------ */
+/** ---------------------------------------------- */
+/* Main */
 main{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: var(--brown)
+}
+/* Hero */
+.hero{
+    display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: var(--white);}
-.hero{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 663px;
-    width: 90vw;
-    background: url(./assets/img/bgbeans.jpeg) center/cover;
+    height: 100vh;
+    width: 88.5vw;
+    background: url(./assets/img/bgbeans.jpeg) no-repeat center/cover;
 }
 .hero-text{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    height: 30%;
-    width: 70%;
+    gap: 20px;
     color: var(--white);
     text-shadow: black 0.1em 0.1em 0.2em;
-    line-height: 40px;
-    font-size: 20px
+    text-align: center;
+    margin: 0 auto;
+    width: 80%;
 }
-
-/* *------------------------------------------------------------------------ */
-
+.hero-text > h1{
+    font-size: 30px;
+}
+.hero-text > h3{
+    font-size: 20px;
+    font-weight: 600;
+}
+.hero-text > p{
+    font-size: 18px;
+    font-weight: 500;
+}
+/* section coffees */
 .section-clasic{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 90vw;
+    width: 88.3vw;
     height: 93vh;
 }
 .selection{
@@ -183,8 +246,7 @@ main{
     justify-content: center;
     align-items: center;
     width: 90%;
-    color: var(--beige);
-    font-size: var(--font-small);
+    color: var(--beige-light);
 }
 .selection > h3{
     margin-top: 30px;
@@ -193,22 +255,22 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end ;
-    width: 90%;
-    color: var(--beige);
+    align-items: flex-end;
+    width: 100%;
+    color: var(--beige-light);
     position: relative;
-
 }
 .container-filter > h4{
-    border: 1px dashed var(--beige);
+    border: 2px dashed var(--beige);
     border-radius: 3px;
-    width: 13.7%;
+    width: 15%;
     text-align: center;
     cursor: pointer;
-    margin-bottom: 5px;
+    border-bottom: 2px solid var(--beige);
 }
-.containepxr-filter > h4:hover{
-    color: var(--brown);
+.container-filter > h4:hover{
+    color: var(--beige-light);
+    background-color: var(--beige);
     transition: all 0.3s ease-in-out;
 }
 .filter{
@@ -219,20 +281,26 @@ main{
     width: 250px;
     height: 100px;
     position: absolute;
-    top: 27px;
-    left: 83%;
-    background: var(--white);
+    top: 24.5px;
+    right: 0px;
+    background: var(--brown);
     z-index: 1;
-    border: 1px dashed var(--beige);
+    border: 2px dashed var(--beige);
+    border-radius: 0px 0px 10px 10px;
+    border-top: solid 2px var(--beige);
 }
-.filter > p > span{
-    font-weight: 700;
+.filter:hover{
+    background-color: var(--beige);
+    color: var(--beige-light);
 }
+
 .filter > p{
     margin-left: 5px;
     cursor: pointer;
-    color: var(--beige);
+    color: var(--beige-light);
     font-size: 15px;
+    text-align: center;
+    margin: 0 auto;
 }
 .filter >p:hover{
     color: var(--brown);
@@ -243,22 +311,23 @@ main{
     font-weight: 700;
 }
 #brasil:hover{
-    color:rgb(23, 158, 28) ;
+    color:rgb(97, 188, 100) ;
     font-weight: 700;
 }
 #italiano:hover{
-    color:rgb(198, 47, 47) ;
+    color:rgb(234, 113, 115) ;
     font-weight: 700;
 }
 
 .cards{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 900px;
     margin-bottom: 30px;
+    color: var(--beige-light);
 }
 .card{
     display: flex;
@@ -276,7 +345,7 @@ main{
     transition: all 0.75s ease-out;
 }
 .img-card{
-    height: 450px;
+    height: 385px;
     width: auto;
     border-radius: 5px;
 }
@@ -294,184 +363,239 @@ main{
     border: none;
     border-radius: 3px;
     cursor: pointer;
-    background: var(--brown);
+    background: var(--beige);
     color: var(--beige-light);
     font-weight: 500;
 }
 .btn-add:hover, .btn-clasic:hover{
     /* border: 2px dashed var(--brown); */
-    background-color: var(--beige);
+    background-color: var(--beige-light);
+    color: var(--brown);
 }
-/* ----------------------------------- */
+/* section pausa e  imagen */
 .section-img{
     background: url(./assets/img/coffee.jpg)no-repeat center/cover;
 }
-
+/* section blog */
 .section-blog{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 90vw;
+    width: 88.3vw;
     height: 100%;
-    gap: 10px;
-    margin: 20px 0px;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.section-blog > h3{
+    margin-top: 30px;
+    color: var(--beige-light);
 }
 .cards-blog{
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    gap: 30px;
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    height: 100%;
+}
+#container-all-cards{
     flex-wrap: wrap;
     height: 100%;
-
+    gap: 30px;
 }
-/* ----------------------------------- */
-
+#container-sing-card{
+    border: 2px solid var(--beige);
+    display: none;
+    flex-wrap: wrap;
+}
+/* section end, ubication y contact */
 .section-ubication-contact{
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     gap: 130px;
-    background-color: var(--beige);
+    background-color: var(--brown);
 }
 .circle-ubication{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 300px;
-    width: 300px;
+    height: 310px;
+    width: 400px;
     border-radius: 50%;
-    background-color: var(--beige-dark);
+    background-color: var(--beige);
     margin: 50px;
     position: relative;
 }
-
 .img-ubication{
     height: 350px;
-    width: 350px;
-    left: 100px;
+    left: 110px;
     position: absolute;
 }
-.img-ubication:hover{
-    cursor: pointer;
-}
-
-.ubication{
+.text-ubication{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 500px;
-    width: 18%;
+    height: 200px;
+    color: var(--beige-light);
     text-align: center;
-}
-.text-ubication > h3{
-    text-align: center;
-    font-size: 25px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-.text-ubication > p{
-    width: 300px;
-    text-align: center;
-    font-size: 14px;
-    font-weight: 500;
-    margin-bottom: 8px;
 }
 .text-ubication > a{
-    font-weight: 700;
-    color: var(--brown);
-}
-.text-ubication > a:hover{
-    font-weight: 700;
     color: var(--beige-light);
 }
-
-.reserve{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    height: 80%;
-    width: 30%;
+.divider-sec{
+    border-bottom: 2px solid var(--beige);
+}
+.divider-sec:hover{
+    background-color: var(--beige);
+    transition: all 0.3s ease-in-out;
+}
+.divider-ult:hover{
+    background-color: var(--beige);
+    transition: all 0.3s ease-in-out;
 }
 .form{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 500px;
-    width: 400px;
+    height: 600px;
 }
 .form > h3{
-    text-align: center;
-    font-size: 25px;
     color: var(--beige-light);
+}
+.form_field{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 .form_field > input{
-    width: 300px;
     height: 30px;
-    border: none;
-    padding-left: 5px;
-    border: none;
-    outline: none;
-    background-color: var(--beige);
-    border-bottom: 2px dashed var(--brown);
-    border-left: 2px dashed var(--brown);
-    color: var(--beige-light);
-}
-.form > textarea{
     width: 300px;
-    height: 150px;
-    border: none;
-    padding: 5px;
     border: none;
     outline: none;
-    background-color: var(--beige);
-    border-bottom: 2px dashed var(--brown);
-    border-left: 2px dashed var(--brown);
-}
-.form_field > input::placeholder, .form > textarea::placeholder{
+    border-radius: 3px;
+    background-color: var(--brown);
     color: var(--beige-light);
+    font-weight: 500;
+    padding: 10px;
+    border: 2px dashed var(--beige);
 }
-footer{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 90vw;
-    height: 70px;
-    padding: 0px 10px 0px 10px;
+.form_field > input:focus{
+    background-color: var(--beige);
+    color: var(--beige-light);
+    transition: all 0.3s ease-in-out;
+}
+.small{
+    width: 75%;
     text-align: center;
-    font-size: 12px;
-}
-.img-footer > img{
-    height: 18px;
-    padding-right:10px ;
-}
-.logo{
-    height: 90% ;
-}
-.bars-menu{
-    display: none;
-}
-.form_field > small{
-    flex-direction: column;
-    justify-content: center;    
-    align-items: center;
-    display: flex;
-    width: 300px;
-    height: 40px;
     color: var(--red);
 }
-#cat-img{
-    width: 380px;
+textarea{
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    background-color: var(--brown);
+    color: var(--beige-light);
+    font-weight: 500;
+    padding: 10px;
+    margin: 0px 10px;
+    width: 84%;
+    border: 2px dashed var(--beige);
 }
-.btn-send:hover{
-        border: 2px dashed var(--brown);
-        background-color: var(--beige);
+textarea:focus{
+    background-color: var(--beige);
+    color: var(--beige-light);
+    transition: all 0.3s ease-in-out;
+}
+footer{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 30px;
+    border-top: 1px solid var(--beige);
+}
+.logo-footer{
+    width: 20px;
+}
+.text-footer{
+    color: var(--beige-dark);
+    font-size: 15px;
+    margin: 0 auto;
+}
+
+
+
+
+
+
+/*! Para javascript */
+.open-menu{
+    display: none;
+    flex-direction: column;
+    justify-content:space-evenly;
+    align-items: center;
+
+}
+.open-carrito{
+    transform: translate(0%);
+    transition: all 0.5s ease-in-out;
+}
+.open-filter{
+    display: flex;
+}
+.hidden{
+    visibility: hidden;
+}
+.form_field.success input{
+    border-bottom: 2px solid #28a745
+}
+.form_field.error input {
+    border-bottom: 2px solid var(--red);
+}
+.small{
+    font-size: 12px;
+    font-weight: 600;
+    color: var(--red);
+    padding: 4px 0px;
+}
+.add-modal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(86, 195, 86);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    transition: all 0.5s ease-in;
+    transform: translateY(200%);
+    padding: 15px 0px;
+}
+.show-modal{
+    transform: translateY(0);
+    transition: all 0.5s ease-out;
+}
+.empty-msg{
+    font-size: 18px;
+    text-align: center;
+}
+.disabled{
+    background-color: grey;
+    color: white;
+    cursor: not-allowed;
+    border: none;
+    scale: 1.1;
+}
+#container-sing-card:nth-child(1), #container-sing-card:nth-child(2),
+#container-sing-card:nth-child(3){
+    display:flex;
+    transition: 0.2s ease all;
 }
