hubieron mejores en la media querie 576px

--- a/media.css
+++ b/media.css
@@ -40,107 +40,6 @@
 }
 /*! ----------------------------- */
 
-/* @media (max-width:1280px){
-    .selection > h3{
-        font-size: 25px;
-    }
-    .container-filter{
-        top: 10%;
-    }
-    .container-filter > h4{
-        width: 31%;
-        left: 390px;
-        top: 88px;
-    }
-    .filter{
-        width: 31%;
-        right: 0px;
-    }
-    .card{
-        width: 350px;
-    }
-    .img-card{
-        width: 300px;
-        height: auto;
-        object-fit: cover;
-    }
-
-    #blog > h3{
-        text-align: center;
-    }
-    #container-sing-card{
-        height: 620px;
-    }
-    .circle-ubication, .img-ubication{
-        display: none;
-    }
-    .form_field > input{
-        width: 380px;
-    }
-} */
-/* -------------------- */
-/* @media(min-width: 1400px){
-    #coffees{
-        height: 100%;
-    }
-    .container-filter{
-        padding: 20px 0px 0px ;
-        width: 57%;
-        top: 130px;
-        left: 435px;
-    }
-    .filter{
-        top: 50px;
-        right: 162px;
-    }
-    .cards{
-        flex-wrap: wrap;
-    }
-} */
-/* @media(min-width: 1600px){
-
-    .selection > h3{
-        font-size: 30px;
-    }
-    .container-filter{
-        left: 303px;
-        top: 70px;
-        padding: 0;
-    }
-    .filter-by{
-        font-size: 25px;
-        width: 42%;
-        left: 182px;
-        top: 0px;
-    }
-    .filter{
-        right: 0px;
-        top: 35px;
-    }
-    .filter > p{
-        font-size: 20px;
-    }
-    .card{
-        height: 750px;
-        width: 450px;
-    }
-    .img-card{
-        height: 430px;
-        width: auto;
-        object-fit: cover;
-    }
-    .card-text, .card-description{
-        font-size: 22px;
-        width: 95%;
-    }
-    .btn-add, .btn-clasic{
-        font-size: 20px;
-        height: 50px;
-        width: 200px;
-    }
-} */
-
-
 /** Media para celular */
 @media (max-width: 576px){
     .logo{
@@ -154,7 +53,7 @@
         font-size: 20px;
         cursor: pointer;
         position: relative;
-        left: 150px;
+        left: 300px;
     }
     .carrito-icon{
         color: var(--beige-light);
@@ -171,7 +70,8 @@
         gap: 50px;
         position: absolute;
         top: 30px;
-        min-width: 300px;
+        right: -211px;
+        min-width: 576px;
         width: 100%;
         padding-bottom: 20px;
         text-align: center;
@@ -179,10 +79,9 @@
     }
     /* --------------- bendito carrito */
     .carrito{
-        position: absolute;
         top: 30px;
         right: 0px;
-        left: -230px;
+        left: -160px;
         padding: 20px 10px;
         background: var(--beige);
     }
@@ -221,6 +120,7 @@
     .filter{
         width: 100%;
         gap: 10px;
+        right: 0px;
     }
     /* --------------- */
     #coffees{
@@ -265,7 +165,7 @@
 .open-menu{
     display: flex;
 }
-.form_field > input{
+.form_field > input, textarea {
     width: 300px;
 }
 }
